# ebpf-oom-watcher

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .yamllint.yaml  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.production  README.md  current.txt  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: pr-checks.yml  release.yml
helm/oom-watcher/: Chart.yaml  values.yaml
helm/oom-watcher/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/: README.md  daemonset.yaml  servicemonitor.yaml
oom-watcher/: Cargo.toml  build.rs
oom-watcher-common/: Cargo.toml
oom-watcher-common/src/: lib.rs
oom-watcher-ebpf/: Cargo.toml  build.rs  minimal_oom.h
oom-watcher-ebpf/src/: main.rs
oom-watcher/src/: enrich.rs  http.rs  kubernetes.rs  main.rs  metrics.rs  resolve.rs  source.rs  watch.rs
scripts/: build-and-test.sh  check_kernel_symbols.sh  setup-dev.sh  trigger_oom.py
