[package]
name = "oom-watcher-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
# `user` enables the std-backed fields (String identities) for the userspace crate. The
# shared types are plain #[repr(C)] structs — no aya dependency is needed on either side.
user = []

[lib]
path = "src/lib.rs"
