[package]
name = "oom-watcher"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = ["ebpf"]
ebpf = []

[dependencies]
bytes = "1"
oom-watcher-common = { path = "../oom-watcher-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true, features = ["async_tokio"], default-features = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }

# Kubernetes and Prometheus dependencies
kube = { version = "0.87", features = ["client", "config", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
prometheus = "0.13"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"

[build-dependencies]
# Build dependencies for compiling the eBPF program
# The eBPF crate is built manually in build.rs, not as a dependency

[[bin]]
name = "oom-watcher"
path = "src/main.rs"
