[package]
name = "oom-watcher"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = ["ebpf"]
# The eBPF probe is Linux-only (aya pulls in Linux syscalls). Gating it keeps the
# testable core (watch loop, recorder, enrichment, resolution) buildable on any platform.
ebpf = ["dep:aya", "dep:aya-log", "dep:libc"]

[dependencies]
bytes = "1.11"
oom-watcher-common = { path = "../oom-watcher-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true, features = ["async_tokio"], default-features = true, optional = true }
aya-log = { workspace = true, optional = true }
env_logger = { workspace = true }
libc = { workspace = true, optional = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }

# Kubernetes and Prometheus dependencies
kube = { version = "3.1", features = ["client", "config", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
# default-features disabled to drop the unmaintained protobuf 2.x encoder
# (RUSTSEC-2024-0437); only the text exposition format (TextEncoder) is used.
prometheus = { version = "0.13", default-features = false }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"

[build-dependencies]
# Build dependencies for compiling the eBPF program
# The eBPF crate is built manually in build.rs, not as a dependency

[[bin]]
name = "oom-watcher"
path = "src/main.rs"
